--- a/src/components/Home/Home.styles.module.scss
+++ b/src/components/Home/Home.styles.module.scss
@@ -3,6 +3,8 @@
   width: 100%;
   min-height: 600px;
   justify-content: space-between;
+  background-color: #d3d3d342;
+  opacity: 0.5;
 }
 
 .introduction {
@@ -14,19 +16,19 @@
   padding: 2rem;
 
   & h1 {
+    z-index: 100;
     font-size: 3rem;
     margin-bottom: 1rem;
   }
 
   & h2 {
+    z-index: 100;
     font-size: 1.5rem;
     margin-bottom: 1rem;
   }
 }
 
 .photo {
-  background-color: #fff;
-  opacity: 0;
   display: flex;
   align-items: flex-end;
   height: 600px;
@@ -36,5 +38,6 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    z-index: -1;
   }
 }
