--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './mixins';
+@import './fonts';
 
 html,
 body,
@@ -107,4 +108,8 @@ ul {
   width: 100%;
   height: 100%;
   padding-top: 5rem;
+}
+
+body {
+  font-family: 'CustomFont', sans-serif;
 }
