--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -88,6 +88,7 @@ video {
 
 body {
   margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 * {
@@ -108,8 +109,4 @@ ul {
   width: 100%;
   height: 100%;
   padding-top: 5rem;
-}
-
-body {
-  font-family: 'CustomFont', sans-serif;
 }
