--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -1,6 +1,8 @@
+@import '../../styles/colors';
+
 a {
   text-decoration: none;
-  color: black;
+  color: $lawyer;
 }
 
 .top-bar {
@@ -35,15 +37,13 @@ a {
 
     .icon {
       margin-right: 0.5rem;
+      color: $lawyer;
     }
 
     .link {
       font-size: 0.875rem;
       text-decoration: none;
-
-      &:hover {
-        text-decoration: underline;
-      }
+      color: $lawyer;
     }
 
     .separator {
@@ -70,14 +70,34 @@ a {
 
 .header {
   background-color: #fff;
-  padding: 1rem 5rem;
+
+  padding: 1rem 6rem;
   width: 100%;
+
+  &.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    animation: slideDown 0.3s ease-in-out;
+  }
+
+  @keyframes slideDown {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 
   &-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
 
     &-inner {
       display: flex;
@@ -85,9 +105,40 @@ a {
       justify-content: space-between;
       line-height: 20px;
       width: 100%;
+
+      .header-logo {
+        padding-top: 20px;
+        padding-bottom: 20px;
+      }
     }
 
-    .header-nav-item {
+    .header-nav-items {
+      display: flex;
+      align-items: center;
+
+      .header-nav-item {
+        margin-right: 2rem;
+        font-size: 0.875rem;
+        font-weight: 500;
+        color: #9ca3af;
+        text-decoration: none;
+        overflow: hidden;
+        border-bottom: 3px solid transparent;
+        transition: 0.3s;
+
+        &::after {
+          padding-bottom: 0.25rem;
+          display: block;
+          content: '';
+          border-bottom: solid 2px $lawyer;
+          transform: scaleX(0);
+          transition: transform 250ms ease-in-out;
+        }
+
+        &:hover::after {
+          transform: scaleX(1);
+        }
+      }
     }
   }
 }
