--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -10,9 +10,11 @@ a {
   box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
   background-color: whitesmoke;
   z-index: 10;
+
   &-container {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+
     &-inner {
       display: flex;
       flex-direction: row;
@@ -89,6 +91,7 @@ a {
     0% {
       transform: translateY(-100%);
     }
+
     100% {
       transform: translateY(0);
     }
@@ -108,7 +111,7 @@ a {
 
       .header-logo {
         padding-top: 20px;
-        padding-bottom: 20px;
+        padding-bottom: 24px;
       }
     }
 
@@ -125,6 +128,10 @@ a {
         overflow: hidden;
         border-bottom: 3px solid transparent;
         transition: 0.3s;
+
+        a:hover {
+          color: black;
+        }
 
         &::after {
           padding-bottom: 0.25rem;
