--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -77,7 +77,7 @@ a {
 .header {
   background-color: #fff;
 
-  padding: 1rem 6rem;
+  padding: 0.5rem 6rem;
   width: 100%;
 
   &.sticky {
@@ -114,8 +114,10 @@ a {
       width: 100%;
 
       .header-logo {
-        padding-top: 20px;
-        padding-bottom: 24px;
+        img {
+          width: 300px;
+          height: auto;
+        }
       }
     }
 
