--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -109,7 +109,8 @@ ul {
   background-color: white;
   width: 100%;
   height: 100%;
-  padding-top: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .no-cursor {
