--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -111,6 +111,21 @@ ul {
   height: 100%;
   padding-left: 5rem;
   padding-right: 5rem;
+
+  @media (max-width: 1024px) {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  @media (max-width: 768px) {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  @media (max-width: 480px) {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 .no-cursor {
