--- a/src/components/Divider/Divider.scss
+++ b/src/components/Divider/Divider.scss
@@ -1,8 +1,8 @@
 .divider {
-    width: 39px;
-    border-color: #B87E5C;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 30px;
-    margin-left: 20px;
-  }
+  width: 39px;
+  border-color: #005028;
+  border-width: 2px;
+  border-style: solid;
+  margin-bottom: 30px;
+  margin-left: 20px;
+}
