--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,53 +1,43 @@
 .crossed-container {
+  position: relative;
+  width: 16rem; // 256px
+  height: 24rem; // 384px
+  border: 1px solid #1e3a8a;
+
+  .cross-pattern {
+    position: absolute;
+    inset: 0;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    &::before {
+      background: linear-gradient(to bottom right, transparent calc(50% - 1px), blue, transparent calc(50% + 1px));
+    }
+
+    &::after {
+      background: linear-gradient(to bottom left, transparent calc(50% - 1px), blue, transparent calc(50% + 1px));
+    }
+  }
+
+  .content {
     position: relative;
-    width: 16rem;  // 256px
-    height: 24rem; // 384px
-    border: 1px solid #1e3a8a;
+    padding: 1rem;
+    z-index: 1;
 
-    .cross-pattern {
-        position: absolute;
-        inset: 0;
-        
-        &::before,
-        &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+    p {
+      margin: 0.5rem 0;
 
-        &::before {
-            background: linear-gradient(
-                to bottom right,
-                transparent calc(50% - 1px),
-                blue,
-                transparent calc(50% + 1px)
-            );
-        }
-
-        &::after {
-            background: linear-gradient(
-                to bottom left,
-                transparent calc(50% - 1px),
-                blue,
-                transparent calc(50% + 1px)
-            );
-        }
+      &.strike {
+        text-decoration: line-through;
+      }
     }
-
-    .content {
-        position: relative;
-        padding: 1rem;
-        z-index: 1;
-
-        p {
-            margin: 0.5rem 0;
-            
-            &.strike {
-                text-decoration: line-through;
-            }
-        }
-    }
-} 
+  }
+}
