--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #1C1C1C;
-  color: #9CA3AF;
+  background-color: #1c1c1c;
+  color: #9ca3af;
   padding: 4rem 0;
 
   &_container {
@@ -57,7 +57,7 @@
     }
 
     &_info {
-      color: #B87E5C;
+      color: #b87e5c;
       margin-top: 0.5rem;
     }
 
@@ -81,7 +81,7 @@
   &_bottom {
     margin-top: 4rem;
     padding-top: 2rem;
-    border-top: 1px solid #1F2937; // border-gray-800
+    border-top: 1px solid #1f2937; // border-gray-800
     display: flex;
     flex-direction: column;
     gap: 1rem;
