--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,14 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 1rem;
+
+    @media (min-width: 768px) {
+      padding: 0 2rem;
+    }
+
+    @media (min-width: 768px) {
+      padding: 0 4rem;
+    }
   }
 
   &_grid {
