--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -51,6 +51,18 @@
       width: 100%;
       margin-left: 0;
     }
+
+    .about-text {
+      p {
+        font-size: 1rem;
+        line-height: 1.6;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+
+  .about-page {
+    padding: 1rem;
   }
 }
 
